--- a/.gitignore
+++ b/.gitignore
@@ -145,5 +145,11 @@ cython_debug/
 # Mac things
 *.DS_Store
 
-#VS Code
+# VS Code
 .vscode
+
+# dbt
+dbt/dbt_modules/
+dbt/dbt_packages/
+dbt/logs/
+dbt/target/
