--- a/dbt/models/gaming/prod/player_engagement.yml
+++ b/dbt/models/gaming/prod/player_engagement.yml
@@ -1,18 +1,14 @@
 version: 2
 
 models:
-  - name: game_play_activity
-    description: "This table records the amount of activity by a player on a given day"
-
+  - name: player_engagement
+    description: This table records ...
     columns:
       - name: player_id
         tests:
           - not_null
-
       - name: event_date
         tests:
           - not_null
-
       - name: device_id
-
       - name: games_played
